# RNNewArchitectureLibraries

./: .gitignore  LICENSE  README.md  RUN.md
SwiftCXX/: App.tsx  app.json  package.json
SwiftCXX/android/: settings.gradle
SwiftCXX/ios/: Podfile  RTNCalculator.swift  SwiftCXX-Bridging-Header.h
SwiftCXX/js/: NativeCalculator.ts
calculator/: calculator.podspec  package.json
calculator/android/: build.gradle
calculator/ios/: Calculator.swift  RNCalculator.h  RNCalculator.m  RNCalculator.mm  calculator-Bridging-Header.h
calculator/src/: NativeCalculator.js  index.js
colored-view/: colored-view.podspec  package.json
colored-view/android/: build.gradle
colored-view/ios/: RNColoredView.h  RNColoredView.mm  RNColoredViewManager.mm
colored-view/src/: ColoredViewNativeComponent.js  index.js
example-component/: example-component.podspec  package.json
example-library/: example-library.podspec  package.json  tsconfig.json
image-component/: image-component.podspec  package.json
image-component/cxx/: CMakeLists.txt  RTNImageComponentCustomNativeState.cpp  RTNImageComponentCustomNativeState.h  RTNImageComponentCustomShadowNode.cpp  RTNImageComponentCustomShadowNode.h
image-component/cxx/react/renderer/components/RTNImageViewSpec/: ComponentDescriptors.h
monorepo/: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  .yarnrc.yml  CONTRIBUTING.md  LICENSE  jest.config.js  lefthook.yml  package.json  react-native-turbo-monorepo.podspec  tsconfig.json
tsc-event-emitter/: package.json  react-native-tsc-event-emitter.podspec  tsconfig.json
(+133 files in other folders)
